# rivus-linter

./: .gitignore  AGENTS.md  Cargo.toml  capsmap.txt  readme.pod  rivus-coding.skill  rivus.md  rust_out.d
caps/: deps  seed  std  suppress
docs/theory/: capability-checking.md
fixtures/: bad_code.rs  banned_imports.rs  mir_test.rs
src/: capability.rs  capsmap.rs  check.rs  extract.rs  lib.rs  lints.rs  main.rs  mir.rs  rename.rs  report.rs  rivus-manual.md  setup.rs  source.rs
src/lints/: banned_import.rs  borrowed_param.rs  call_violation.rs  callgraph.rs  catch_all_error.rs  catch_unwind.rs  consumed_arg.rs  ctx.rs  dead_code.rs  debug_assert.rs  deny_warnings.rs  deref_polymorphism.rs  empty_fn.rs  error_swallow.rs  missing_allow.rs  missing_debug_derive.rs  missing_doc.rs  missing_safety_doc.rs  mod.rs  msg.rs  non_rvs_fn.rs  port_traits.rs  reflection.rs  signature_caps.rs  spawn.rs  static_ref.rs  stub_macro.rs  suffix_order.rs  test_name_format.rs  test_quality.rs  todo_comment.rs  utils.rs  validate.rs
test_out/: 20260418_capset_from_str_invalid.out  20260418_capset_from_str_valid.out  20260418_compliance_cap_can_call_empty.out  20260418_compliance_empty_can_call_empty.out  20260418_compliance_empty_cannot_call_cap.out  20260418_compliance_same_set_can_call.out  20260418_compliance_subset_cannot_call_superset.out  20260418_compliance_superset_can_call_subset.out  20260418_linter_method_call_violation.out  20260418_linter_multiple_functions.out  20260418_linter_pure_calls_mutable.out  20260418_linter_single_violation.out  20260418_parse_all_eight_caps.out  20260418_parse_bare_rvs.out  20260418_parse_lowercase_suffix.out  20260418_parse_multi_cap.out  20260418_parse_no_cap_tricky_name.out  20260418_parse_no_suffix.out  20260418_parse_no_underscore_after_rvs.out  20260418_parse_non_rvs.out  20260418_parse_short_base_with_cap.out  20260418_parse_single_cap.out  20260418_parse_two_caps.out  20260418_report_basic.out  20260418_report_empty.out  20260418_report_overlapping_caps.out  20260418_span_line_numbers.out  20260418_static_in_method_usage.out  20260418_static_mut_ref_requires_PU.out  20260418_static_mut_ref_requires_SU.out  20260418_static_ref_requires_P.out  20260418_static_ref_requires_S.out  20260418_syn_nested_calls_in_closure.out  20260418_syn_parse_fn_with_calls.out  20260418_syn_parse_impl_method.out  20260418_syn_parse_method_call.out  20260418_syn_parse_single_fn.out  20260418_syn_parse_trait_method.out  20260418_syn_skip_non_rvs.out  20260418_syn_trait_default_impl.out  (+178 more)
tests/: snapshot_tests.rs  ui_tests.rs
tests/ui/: 01_call_compliant.rs  01_call_compliant.stderr  02_call_violation.rs  02_call_violation.stderr  03_stub_todo.rs  03_stub_todo.stderr  04_empty_fn.rs  04_empty_fn.stderr  05_missing_assert.rs  05_missing_assert.stderr  06_infer_panic.rs  06_infer_panic.stderr  07_infer_async.rs  07_infer_async.stderr  08_infer_unsafe.rs  08_infer_unsafe.stderr  09_missing_doc.rs  09_missing_doc.stderr  100_infer_async_with_A_ok.rs  101_infer_thread_local_with_ST_ok.rs  102_allow_present_on_fn_ok.rs  103_allow_mod_level_ok.rs  104_allow_on_impl_block_ok.rs  105_allow_no_caps_no_warning.rs  106_wildcard_import_super_ok.rs  107_borrowed_param_str_ok.rs  108_borrowed_param_owned_ok.rs  109_borrowed_param_mut_ref_ok.rs  10_has_doc_ok.rs  10_has_doc_ok.stderr  110_deny_specific_lints_ok.rs  111_missing_debug_with_derive_ok.rs  112_missing_debug_private_ok.rs  (+232 more)
