[package]
name = "rivus-linter"
version = "0.2.0"
edition = "2024"
publish = false

[[bin]]
name = "cargo-rivus"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml_edit = "0.22"

[package.metadata.rust-analyzer]
rustc_private = true
