[package]
name = "rivus-linter"
version = "0.2.0"
edition = "2024"
publish = false

[[bin]]
name = "cargo-rivus"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml_edit = "0.22"
ra_ap_ide = "0.0.336"
ra_ap_ide_db = "0.0.336"
ra_ap_hir = "0.0.336"
ra_ap_load-cargo = "0.0.336"
ra_ap_paths = "0.0.336"
ra_ap_project_model = "0.0.336"
ra_ap_vfs = "0.0.336"

[lints]

[lints.clippy]
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
large_futures = "warn"
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
use_debug = "warn"
dbg_macro = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
manual_ok_err = "allow"

[package.metadata.rust-analyzer]
rustc_private = true
